feat: campos editáveis + dropdowns IBGE + tratamento de data inválida
Edição expandida:
- Nome do cliente agora editável (antes era disabled/readonly)
- Todos os campos do endereço editáveis no modal de editar (antes só número, complemento, telefone, principal)
- CPF/CNPJ e tipoPessoa permanecem imutáveis (regra forte do projeto)

Dropdowns dinâmicos via API do IBGE:
- UF e Cidade agora carregam da API do IBGE em ambos os frontends
- Lista estática de 27 UFs removida do Wicket e do Angular
- Wicket usa padrão HiddenField + <select> JS para suportar lista dinâmica
- Novo IbgeService no Angular com cache local por sessão
- Integração com ViaCEP: ao buscar CEP, seleciona UF e carrega cidades automaticamente

Tratamento de data inválida:
- GlobalExceptionHandler detecta HttpMessageNotReadableException de LocalDate
  e retorna "Data inválida. Use o formato dd/mm/aaaa com dia/mês/ano válidos."
- Angular valida data real no converterData (rejeita 99/99/9999, 31/02, etc.)

Documentação:
- README.md reescrito do zero focado em "como rodar o projeto"
- CLAUDE.md raiz atualizado refletindo Angular completo e features novas
- controller/CLAUDE.md: lista de rotas atualizada (paginação, contadores, importação)
- wicket/page/CLAUDE.md: documenta padrão HiddenField+select para listas dinâmicas

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>